[package]
authors = ["Luke Eltiste"]
description = "A CLI Program to help manage projects"
edition = "2021"
name = "ftask"
readme = "README.md"
repository = "https://github.com/Frazzer951/fTask"
version = "0.2.0"

[dependencies]
clap = { version = "4.0.12", features = ["derive"] }
dirs = "4.0.0"
rusqlite = { version = "0.27.0", features = ["bundled"] }