[package]
authors = ["Luke Eltiste"]
description = "A CLI Program to help manage projects"
edition = "2021"
name = "ftask"
readme = "README.md"
repository = "https://github.com/Frazzer951/fTask"
version = "0.3.0"

[dependencies]
clap = {version = "4.0", features = ["cargo"]}
dialoguer = "0.10"
dirs = "4.0"
rusqlite = {version = "0.28", features = ["bundled"]}
